hphp/test/quick/hh_type_args2.php.expectf
1
1

Fatal error: Argument 1 passed to takes_x() must be an instance of X, string given in %s on line 4
